--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,10 @@
     <string name="str_navigate">"목적지로 안내하겠습니다."</string>
     <string name="str_restart">"목적지를 다시 설정하시겠습니까?"</string>
     <string name="APP_CLOSE_BACK_BUTTON">"뒤로가기를 한 번 더 누르시면 종료됩니다"</string>
-    <string name="str_arrival">"목적지에 도착하였습니다."</string>
-    <string name="str_stairs">"앞에 계단이 있습니다. 조심하세요."</string>
+    <string name="str_arrival">"목적지에 도착하였습니다. 안내를 종료합니다."</string>
+    <string name="str_stairs">"전방에 계단이 있습니다. 조심하세요."</string>
     <string name="str_redlight">"전방에 신호등이 있습니다. 대기하세요."</string>
     <string name="str_bluelight">"신호등을 건너겠습니다."</string>
-    <string name="str_prevdestination">"입니다. 이전 목적지로 가시겠습니까?"</string>
+    <string name="str_prev_destination">"입니다. 이전 목적지로 가시겠습니까?"</string>
     <string name="str_reanswer">"다시 말씀하세요."</string>
 </resources>
